wrapped up with popup image fixed

--- a/src/Components/CSS/Sidebar.css
+++ b/src/Components/CSS/Sidebar.css
@@ -15,7 +15,7 @@ a {
     padding: .9rem;
     color: white;
     gap: 1.5rem;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .dash-icon {
